<resources>
    <string name="app_name">CapstoneDesign</string>
    <string name="kakao">카카오 연동하기</string>
    <string name="naver">네이버 연동하기</string>
    <string name="hint_id">이메일를 입력하세요</string>
    <string name="hint_pw">비밀번호를 입력하세요</string>
    <string name="btn_login">로그인</string>
    <string name="email">이메일</string>
    <string name="pw">비밀번호</string>
    <string name="pw_check">비밀번호 확인</string>
    <string name="btn_back">뒤로가기</string>
    <string name="register">회원가입</string>
    <string name="id_search">아이디 찾기</string>
    <string name="pw_search">비밀번호 찾기</string>
    <string name="state">상태</string>
    <string name="location">위치</string>
    <string name="graph">분석</string>
    <string name="profile">프로필</string>
    <string name="setting">설정</string>
    <string name="name">이름</string>
    <string name="check">확인</string>
    <string name="emailMessage">가입할 때 등록한 이메일을 적어주세요.</string>
    <string name="pwMessage">새로운 비밀번호를 적어주세요.</string>
    <string name="email_notion">이메일 형식으로 입력해주세요.</string>
    <string name="pw_notion">8~20자 영어, 숫자, 특수문자를 사용해주세요.</string>
    <string name="notice1">
        안녕하세요. 러닝 메이트입니다.\n\n
        앱 시스템 안전성 확보를 위한 서버 증설 및 최적화 작업이 아래와 같이 예정되어 안내드립니다.\n
        사용자 분들이 받을 수 있는 영향을 최소화하기 위해 3일 이전에 미리 공지드리오니, 예정된 점검 시간을 필히 확인하여 주시기 바랍니다.\n
        걸음 수 측정은 11/27 03시부터 06시까지 일시 중단됩니다.\n\n
        [점검시간]\n\n
        - 서버 점검 시간 : 2021-11-27 03:00 ~ 06:00(약 3시간 예정)\n
        - 걸음 수 측정 중단 시간 : 2021-11-27 03:00 ~ 06:00(약 3시간 예정)\n
        - 점검 완료 시간은 예정보다 빠르거나 늦어질 수 있으며, 완료 시 추가 안내 드리겠습니다.\n
        - 본 점검은 상황에 따라 연기 되거나 취소될 수 있습니다. 점검 관련하여 변동 사항 발생 시 본 공지를 통해 업데이트 드리도록 하겠습니다.\n\n
        이번 작업을 통해 보다 안정적인 앱 사용을 지원할 수 있도록 최선을 다하겠습니다.\n\n
        많은 양해 부탁드립니다.\n
        감사합니다.
    </string>
    <string name="notice2">
        안녕하세요. 러닝 메이트입니다.\n\n
        앱 시스템 중 분석 차트에 오류가 생겼으며 이에 긴급 점검을 돌입하게 되어 분석 차트 서비스가 중단되었습니다. 점검이 완료되면 분석 차트 서비스를 재개할 예정이며, 본 공지를 통하여 서비스 재개를 업데이트 하겠습니다.\n\n
        - 걸음 수와 차트 내용은 분석 차트 서비스 재개 후 순차적으로 반영될 예정입니다.\n\n
        이용에 불편을 드려 죄송합니다.\n
        감사합니다.
    </string>
    <string name="que1">
        운동량 차트는 다음과 같은 방법으로 확인 가능합니다.\n\n
        1. [분석]을 클릭합니다.\n
        2. 상단에 [걸음수], [소모 칼로리], [이동거리], [이동시간] 버튼이 있습니다. 확인하고 싶은 수치를 나타내는 버튼을 클릭하면 됩니다.\n
        3. 확인하고 싶은 수치를 클릭하면 일별로 자신의 수치를 확인할 수 있습니다.\n
        4. 1일치 뿐만이 아닌 오른쪽 스위치를 통해 원하는 단위로 조절 가능합니다.\n
        5. 친구 비교 버튼을 통해 내 수치 뿐만이 아닌 해당 친구 수치까지 그래프에 띄울 수 있어 비교 분석이 가능합니다.
    </string>
    <string name="que2">
        친구에게 메시지 전송은 다음과 같은 방법으로 확인 가능합니다.\n\n
        1. [프로필]을 클릭합니다.\n
        2. 개인 프로필 아래에서 메시지를 보내고 싶은 대상의 전송 버튼을 클릭합니다.\n
        3. 메시지의 종류는 2가지로 보내는 목적에 맞게 클릭합니다.\n
        4. 원하는 메시지를 선택한 다음 확인 버튼을 누르면 됩니다.\n
    </string>
</resources>