<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/first_bottm_tab"
        app:showAsAction="always"
        android:enabled="true"
        android:icon="@drawable/state"
        android:title="@string/state" />

    <item
        android:id="@+id/second_bottm_tab"
        app:showAsAction="always"
        android:enabled="true"
        android:icon="@drawable/graph"
        android:title="@string/graph">
    </item>

    <item
        android:id="@+id/third_bottm_tab"
        app:showAsAction="always"
        android:enabled="true"
        android:icon="@drawable/feed"
        android:title="@string/profile">
    </item>

    <item
        android:id="@+id/fourth_bottm_tab"
        app:showAsAction="always"
        android:enabled="true"
        android:icon="@drawable/setting"
        android:title="설정">
    </item>
</menu>