<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/skyblue"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/emailMessage"
            android:textColor="@color/black">
        </TextView>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/sky"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:hint="@string/hint_id"
            android:textColorHint="@color/input_register_hint" />

        <Button
            android:id="@+id/check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dip"
            android:backgroundTint="@color/pink"
            android:text="@string/check"
            android:textColor="@color/black"/>
    </LinearLayout>
</LinearLayout>